examples/c/error-codes/undefined/UB-TEAS4-bad-static.output
UB-TEAS4-bad-static.c:5:4: error: assigning to 'int' from incompatible type 'void'
 x = (void)5;
   ^ ~~~~~~~
1 error generated.
